Pending changes to grpc and the user service
